# magnos

./: .gitignore  .gitmodules  LICENSE  README.md  amplificatore.py  atomo.py  batteria.py  main.py  minatore.py  motore.py  navigatore.py  proiettile.py  schizzo.py  terra.py  testbed.py
AirSim/: build.sh
magnetico/: CMakeLists.txt  CMakeSettings.json  README.md  arm-gcc-toolchain.cmake  generate_macos.sh  run.bat  setup.ps1  setup.sh
magnetico/AirSim/: build.sh
magnetico/AirSim/AirLib/: CMakeLists.txt
magnetico/AirSim/AirLib/include/components/: Battery.hpp  Capacitor.hpp  Coil.hpp  EVEngine.hpp  IronBall.hpp  Laser.hpp  LitoElectric.hpp  Magnet.hpp  MagneticBall.hpp  Magnos.hpp  MovingAverageFilter.hpp  PIDController.hpp
magnetico/AirSim/AirLib/src/components/: Battery.cpp  Capacitor.cpp  EVEngine.cpp  IronBall.cpp  Laser.cpp  LitoElectric.cpp  Magnet.cpp  MagneticBall.cpp  Magnos.cpp  MovingAverageFilter.cpp  PIDController.cpp
magnetico/AirSim/GazeboDrone/: CMakeLists.txt
magnetico/AirSim/cmake/: CMakeLists.txt
magnetico/AirSim/cmake/AirLib/: CMakeLists.txt
magnetico/AirSim/cmake/MavLinkCom/: CMakeLists.txt
magnetico/AirSim/cmake/cmake-modules/: CommonSetup.cmake
magnetico/Content/: alpha.py  detail.py  electricBeamSystem.pu  explosion.plist
magnetico/Content/axslc/: colorNormalTexture_fs  colorNormalTexture_fs_1  colorNormal_fs  label_distanceGlow_fs  positionNormalTexture_vs  positionNormalTexture_vs_1  skinPositionNormalTexture_vs  skinPositionNormalTexture_vs_1  terrain_fs
magnetico/Content/chevron/: chevron.c3b  chevron.fbx  chevron.mtl
magnetico/Content/polestar/: Polestar1_Lamps_Metallic.mtl  polestar.mtl
magnetico/Content/res/: laser_rainbow.frag
magnetico/Content/scripts/: electricBeamSystem.pu
magnetico/Content/stella/: earth.mtl  sphere.mtl
magnetico/FFT-cpp/: CMakeLists.txt
magnetico/FFT-cpp/include/: FFT.hpp
magnetico/FFT-cpp/src/: FFT.cpp
magnetico/Source/: AdvancedCarGameState.cpp  AdvancedCarGameState.h  AlternatorSystem.cpp  AlternatorSystem.h  AppDelegate.cpp  BallisticGameState.cpp  BallisticGameState.h  BasicCarGameState.cpp  BasicCarGameState.h  Battery.cpp  Capacitor.cpp  Car.cpp  Car.h  ChVisualSystemAxmol.cpp  ChVisualSystemAxmol.h  Coil.cpp  Coil.h  CoilEntity.h  CoilSystem.cpp  CoilSystem.h  CustomNode.cpp  CustomNode.h  ElectromagneticEntity.cpp  ElectromagneticEntity.h  GameState.h  HelloWorldScene.cpp  HelloWorldScene.h  IronBall.cpp  IronBall.h  Laser.cpp  Laser.h  Magnet.cpp  Magnet.h  MagnetEntity.h  MagnetSystem.cpp  MagnetSystem.h  MagneticBall.cpp  MagneticBall.h  MaritimeGimbal3D.cpp  MaritimeGimbal3D.h  (+23 more)
magnetico/axmol/: .gitignore
magnetico/axmol/cmake/Modules/: AXBuildHelpers.cmake  AXBuildSet.cmake  AXConfigDefine.cmake  AXPlatform.cmake
magnetico/axmol/core/: CMakeLists.txt
magnetico/axmol/core/2d/: Camera.h  FontAtlas.cpp  Node.cpp  Node.h  ParticleSystem.cpp  RenderTexture.cpp  RenderTexture.h  Scene.cpp  TMXXMLParser.cpp
magnetico/axmol/core/3d/: Bundle3D.cpp  Mesh.cpp  MeshRenderer.cpp  ObjLoader.cpp  ObjLoader.h
magnetico/axmol/core/base/: Config.h  Utils.h  ZipUtils.cpp  ZipUtils.h
magnetico/axmol/core/media/: WmfMediaEngine.cpp
magnetico/axmol/core/network/: HttpClient-wasm.cpp
magnetico/axmol/core/platform/: Image.cpp
magnetico/axmol/core/renderer/: Renderer.cpp
magnetico/axmol/extensions/Inspector/: Inspector.cpp
magnetico/axmol/extensions/SDFGen/: SDFGen.cpp
magnetico/axmol/tools/fbx-conv/: .gitignore  generate_makefile  generate_xcode  premake.lua
magnetico/chrono/: CMakeLists.txt
magnetico/chrono/cmake/: FindOptiX.cmake  GetGitRevisionDescription.cmake
magnetico/chrono/src/: CMakeLists.txt
magnetico/chrono/src/chrono_gpu/: CMakeLists.txt
magnetico/chrono/src/chrono_multicore/: CMakeLists.txt
magnetico/chrono/src/chrono_opengl/: CMakeLists.txt
magnetico/chrono/src/chrono_sensor/: CMakeLists.txt
magnetico/chrono/src/chrono_synchrono/: CMakeLists.txt
magnetico/chrono/src/chrono_vehicle/: CMakeLists.txt
magnetico/chrono/src/chrono_vsg/: CMakeLists.txt
magnetico/kaldi-decoder/: CMakeLists.txt
magnetico/kaldi-decoder/kaldi-decoder/csrc/: CMakeLists.txt
magnetico/kaldi-native-fbank/: CMakeLists.txt
magnetico/kaldi-native-fbank/kaldi-native-fbank/csrc/: CMakeLists.txt
magnetico/kaldifst/: CMakeLists.txt
magnetico/kaldifst/kaldifst/csrc/: CMakeLists.txt
magnetico/librosapp/kissfft/: CMakeLists.txt  kiss_fftnd.h  kiss_fftndr.h  kiss_fftr.h
magnetico/onnx/: CMakeLists.txt
magnetico/onnx/onnx/version_converter/: convert.h
magnetico/openfst/: CMakeLists.txt
magnetico/openfst/src/lib/: CMakeLists.txt
magnetico/proj.android/: settings.gradle
magnetico/proj.android/app/: AndroidManifest.xml  build.gradle
magnetico/proj.linux/: main.cpp
magnetico/sherpa-onnx/: CMakeLists.txt
magnetico/sherpa-onnx/scripts/whisper/: export-onnx.py
magnetico/sherpa-onnx/sherpa-onnx/c-api/: CMakeLists.txt
magnetico/sherpa-onnx/sherpa-onnx/csrc/: CMakeLists.txt  offline-recognizer-whisper-impl.h  offline-stream.h  offline-whisper-decoder.h  offline-whisper-greedy-search-decoder.cc  offline-whisper-greedy-search-decoder.h  offline-whisper-model.cc  offline-whisper-model.h
magnetico/stk/: CMakeLists.txt
magnetico/stk/include/: Mutex.h  Socket.h  Thread.h
magnetico/translator/: .gitignore
magnetico/translator/detective/: DataUtils.cpp  DataUtils.h  DepthEngine.cpp  DepthEngine.h  HybridnetsEngine.cpp  HybridnetsEngine.h  Image.h  MLUtils.cpp  MLUtils.h  OnnxEngine.cpp  OnnxEngine.h  RoadEngine.cpp  RoadEngine.h  StbUtils.cpp  TusimpleEngine.cpp  TusimpleEngine.h
magnetico/translator/models/: chunker.py
magnetico/translator/src/: layer_details.hpp  main.cpp  mlpack_to_torch.hpp  model_parser.hpp  model_parser_impl.hpp  onnx_to_mlpack.hpp
magnetico/translator/test/: AudioProcessor.cpp  AudioProcessor.hpp  Image.h  MLUtils.cpp  MLUtils.h  MagicalAudio.cpp  MagicalAudio.hpp  MagicalWhisper.cpp  MagicalWhisper.hpp  OnnxEngine.cpp  OnnxUtils.h  StbUtils.h  main.cpp
magnetico/whisper/: CMakeLists.txt  whisper.cpp  whisper.h
(+104 files in other folders)
